--- a/contact.html
+++ b/contact.html
@@ -2,99 +2,138 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Jimi Loc Nguyen</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Jimi Loc Nguyen</title>
+
 
 
 </head>
 
 <body>
 
-    <!-- helps to enclose the header and nav links within 960px -->
-    <div id="top">
-      <div class="container">
+  <!-- helps to enclose the header and nav links within 960px -->
+  <div id="top">
+    <div class="container">
+      <div class="row">
 
-        <div class="row">
-          
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="col-sm-3">
-              <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+        <nav class="navbar navbar-expand-lg navbar-white bg-white">
+          <div class="col-md-3">
+            <a class="navbar-brand" href="#">Jimi</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="col-md-6">
+            <p> </p>
+          </div>
+          <div class="col-md-3">
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link" href="#">Portfolio</a>
               </div>
-              <div class="col-sm-9">
-                <div class="collapse navbar-collapse puul-right" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
-                    <a class="nav-item nav-link" href="#">Portfolio</a>
-                  </div>
-                </div>
-              </div>
-              </nav>
-
-        </div>
-
+            </div>
+          </div>
+        </nav>
       </div>
-
     </div>
+  </div>
 
 
-    <!-- large grey image around bio -->
-    <div class="container1">
-        <!-- Section about myself with white background -->
-        <section class="bio">
-            <!-- header for each middle section -->
+  <!-- large grey image around bio -->
+  <div class="wrapper">
+  <div class="container">
+    
+      <!-- Section about myself with white background -->
+      <section class="bio">
+        <!-- header for each middle section -->
+        <div class="row">
+          <div class="col-sm-12 pull-left">
             <h2 id="h2">
-                Contact
+              Contact
             </h2>
-            <!-- Horizontal line break -->
-            <hr>
+          </div>
+        </div>
+        <!-- Horizontal line break -->
+        <hr>
 
-            <!-- Contact form inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp-->
-            <form action="action_page.php">
-                <!-- Name label -->
-                <label for="name">
-                    Name
-                </label>
+        <!-- Contact form inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp-->
+        <form action="action_page.php">
+          <!-- Name label -->
+          <div class="row">
+            <div class="col-sm-12">
+              <label for="name">
+                Name
+              </label>
+            </div>
+          </div>
 
-                <!-- input box -->
-                <input type="text" id="name" name="name" placeholder="Your name..">
+          <!-- input box -->
+          <div class="row">
+            <div class="col-sm-12">
+              <input type="text" id="name" name="name" placeholder="Your name..">
+            </div>
+          </div>
 
-                <!-- Email label -->
-                <label for="email">
-                    E-Mail
-                </label>
+          <!-- Email label -->
+          <div class="row">
+            <div class="col-sm-12">
+              <label for="email">
+                E-Mail
+              </label>
+            </div>
+          </div>
 
-                <!-- input box -->
-                <input type="text" id="email" name="email" placeholder="Your email..">
+          <!-- input box -->
+          <div class="row">
+            <div class="col-sm-12">
+              <input type="text" id="email" name="email" placeholder="Your email..">
+            </div>
+          </div>
 
-                <!-- message label -->
-                <label for="message">
-                    Message
-                </label>
-                <!-- Text input box -->
-                <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+          <!-- message label -->
+          <div class="row">
+            <div class="col-sm-12">
+              <label for="message">
+                Message
+              </label>
+            </div>
+          </div>
 
-                <input type="submit" value="Submit">
+          <!-- Text input box -->
+          <div class="row">
+            <div class="col-sm-12">
+              <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <input type="submit" value="Submit">
+            </div>
+          </div>
+        </form>
 
-            </form>
 
-
-        </section>
+      </section>
     </div>
+  </div>
 
-    <!-- cute footer that is fixed -->
-    <footer>
-        <p id="love">
-            Copyright &copy;
-        </p>
-    </footer>
+
+
+
+
+  <!-- cute footer that is fixed -->
+  <footer>
+    <p id="love">
+      Copyright &copy;
+    </p>
+  </footer>
 
 </body>
 
