contact page finally done with footer

--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,13 @@
 
   <!-- large grey image around bio -->
   <div class="wrapper">
-  <div class="container">
-    
+    <div class="container">
+
       <!-- Section about myself with white background -->
       <section class="bio">
         <!-- header for each middle section -->
         <div class="row">
-          <div class="col-sm-12 pull-left">
+          <div class="col-sm-12">
             <h2 id="h2">
               Contact
             </h2>
@@ -130,9 +130,21 @@
 
   <!-- cute footer that is fixed -->
   <footer>
-    <p id="love">
-      Copyright &copy;
-    </p>
+    <div class="container foot">
+      <div class="row">
+        <div class="col-sm-5">
+          <p> </p>
+        </div>
+        <div class="col-sm-2">
+          <p id="love">
+            Copyright &copy;
+          </p>
+        </div>
+        <div class="col-sm-5">
+          <p> </p>
+        </div>
+      </div>
+    </div>
   </footer>
 
 </body>
