--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
           <div class="col-md-3">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Contact</a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link active" href="./portfolio.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="./contact.html">Contact</a>
+                <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
               </div>
             </div>
           </div>
