finished portfolio and fixed index linking to bio at navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,97 +5,189 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jimi Loc Nguyen</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  
+
+
+
 </head>
 
 <body>
 
     <!-- helps to enclose the header and nav links within 960px -->
     <div id="top">
+        <div class="container">
+            <div class="row">
 
-        <!-- Site header with name -->
-        <header>
-
-            <h1>Jimi Loc Nguyen</h1>
-
-        </header>
-
-        <!-- links to different pages on the website -->
-
-        <div class="nav">
-
-            <a class=links href="./contact.html">| Contact</a>
-            <a class=links href="./portfolio.html">Portfolio</a>
-            <a class=links href="./index.html">About |</a>
+                <nav class="navbar navbar-expand-lg navbar-white bg-white">
+                    <div class="col-md-3">
+                        <a class="navbar-brand" href="#">Jimi</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="col-md-6">
+                        <p> </p>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-item nav-link active" href="./index.html">About <span
+                                        class="sr-only">(current)</span></a>
+                                <a class="nav-item nav-link" href="./contact.html">Contact</a>
+                                <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
 
     <!-- large grey image around bio -->
-    <div class="container1">
-        <!-- Section about myself with white background -->
-        <section class="bio">
-            <!-- header for each middle section -->
-            <h2 id="h2">
-                Portfolio
-            </h2>
-            <!-- Horizontal line break -->
-            <hr>
-            <!-- Sets positioning for boxes within -->
-            <div class="images">
+    <div class="wrapper">
+        <div class="container">
+            <!-- Section about myself with white background -->
+            <section class="bio">
+                <!-- header for each middle section -->
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h2 id="h2">
+                            Contact
+                        </h2>
+                    </div>
+                </div>
+                <!-- Horizontal line break -->
+                <hr>
+                <!-- Sets positioning for boxes within -->
+                <div class="images">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <!-- Image links (currently empty links) -->
+                            <a class="box1 image1" href="https://www.lyricopera.org/" target="_blank">
+                                <img class="box1" src="./assets/images/ballet.jpg" alt="dance">
+                            </a>
+                        </div>
+                            <div class="col-sm-3">
+                                <!-- Image links (currently empty links) -->
+                                <a class="box1 image2" href="https://www.bundesjugendballett.de/d/index.html"
+                                    target="_blank">
+                                    <img class="box1" src="./assets/images/dance male.jpg" alt="male dancer">
+                                </a>
 
-                <!-- Image links (currently empty links) -->
-                <a class="box1 image1" href="https://www.lyricopera.org/" target="_blank">
-                    <img class="box1" src="./assets/images/ballet.jpg" alt="dance">
-                </a>
-                <!-- Word box describing each link -->
-                <div class="title box2">LEAP</div>
-
-                <!-- Image links (currently empty links) -->
-                <a class="box1 image2" href="https://www.bundesjugendballett.de/d/index.html" target="_blank">
-                    <img class="box1" src="./assets/images/dance male.jpg" alt="male dancer">
-                </a>
-                <!-- Word box describing each link -->
-                <div class="title box3">REACH</div>
-
-
-                <!-- Image links (currently empty links) -->
-                <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
-                    <img class="box1" src="./assets/images/dance.jpeg" alt="dancer">
-                </a>
-                <!-- Word box describing each link -->
-                <div class="title box4">STRETCH</div>
-                <!-- Image links (currently empty links) -->
-
-                <a class="box1 image4" href="https://www.sephora.com" target="_blank">
-                    <img class="box1" src="./assets/images/makeup 2.jpg" alt="makeup">
-                </a>
-                <!-- Word box describing each link -->
-                <div class="title box5">CREATE</div>
-
-                <!-- Image links (currently empty links) -->
-                <a class="box1 image5" href="https://www.ulta.com/" target="_blank">
-                    <img class="box1" src="./assets/images/makeup.jpeg" alt="makeup powder">
-                </a>
-                <!-- Word box describing each link -->
-                <div class="title box6">BLEND</div>
+                            </div>
 
 
-            </div>
+                            <div class="col-sm-6">
+                                <p> </p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="title box2">LEAP</div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="title box3">REACH</div>
+                        </div>
 
 
-        </section>
+                        <div class="col-sm-6">
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <!-- Image links (currently empty links) -->
+                            <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
+                                <img class="box1" src="./assets/images/dance.jpeg" alt="dancer">
+                            </a>
+
+                        </div>
+                        <!-- Word box describing each link -->
+
+                        <!-- Image links (currently empty links) -->
+                        <div class="col-sm-3">
+                            <a class="box1 image4" href="https://www.sephora.com" target="_blank">
+                                <img class="box1" src="./assets/images/makeup 2.jpg" alt="makeup">
+                            </a>
+
+                        </div>
+                        <!-- Word box describing each link -->
+
+                        <div class="col-sm-6">
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="title box4">STRETCH</div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="title box5">CREATE</div>
+                        </div>
+
+
+                        <div class="col-sm-6">
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <!-- Image links (currently empty links) -->
+                            <a class="box1 image5" href="https://www.ulta.com/" target="_blank">
+                                <img class="box1" src="./assets/images/makeup.jpeg" alt="makeup powder">
+                            </a>
+
+                        </div>
+                        <!-- Word box describing each link -->
+
+                        <div class="col-sm-9">
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="title box6">BLEND</div>
+                        </div>
+
+
+
+                        <div class="col-sm-9">
+                            <p> </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
     </div>
+
+
+
 
     <!-- cute footer that is fixed -->
     <footer>
-        <p id="love">
-            Copyright &copy;
-        </p>
+        <div class="container foot">
+            <div class="row">
+                <div class="col-sm-5">
+                    <p> </p>
+                </div>
+                <div class="col-sm-2">
+                    <p id="love">
+                        Copyright &copy;
+                    </p>
+                </div>
+                <div class="col-sm-5">
+                    <p> </p>
+                </div>
+            </div>
+        </div>
     </footer>
-
 
 </body>
 
