--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,8 @@
           <div class="col-md-3">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="./portfolio.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="./index.html">About <span
+                    class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="./contact.html">Contact</a>
                 <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
               </div>
