--- a/contact.html
+++ b/contact.html
@@ -20,28 +20,36 @@
     <div class="container">
       <div class="row">
 
-        <nav class="navbar navbar-expand-lg navbar-white bg-white">
-          <div class="col-md-3">
-            <a class="navbar-brand" href="#">Jimi</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+        <div class="col-md-5">
+          <a class="navbar-brand" href="#">Jimi</a>
+        </div>
+        <div class="col-md-7">
+
+          <nav class="navbar navbar-expand-lg navbar-light bg-white">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
-          <div class="col-md-6">
-            <p> </p>
-          </div>
-          <div class="col-md-3">
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="./index.html">About <span
-                    class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./contact.html">Contact</a>
-                <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
-              </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                </li>
+
+              </ul>
             </div>
-          </div>
-        </nav>
+          </nav>
+
+        </div>
+
       </div>
     </div>
   </div>
