--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jimi Loc Nguyen</title>
@@ -20,29 +21,37 @@
         <div class="container">
             <div class="row">
 
-                <nav class="navbar navbar-expand-lg navbar-white bg-white">
-                    <div class="col-md-3">
-                        <a class="navbar-brand" href="#">Jimi</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                            aria-label="Toggle navigation">
+
+                <div class="col-md-5">
+                    <a class="navbar-brand" href="#">Jimi</a>
+                </div>
+                <div class="col-md-7">
+
+                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                    </div>
-                    <div class="col-md-6">
-                        <p> </p>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-item nav-link active" href="./index.html">About <span
-                                        class="sr-only">(current)</span></a>
-                                <a class="nav-item nav-link" href="./contact.html">Contact</a>
-                                <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
-                            </div>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="./index.html">About <span
+                                            class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                                </li>
+
+                            </ul>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+
+                </div>
+
             </div>
         </div>
     </div>
@@ -65,102 +74,70 @@
                 <!-- Sets positioning for boxes within -->
                 <div class="images">
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
                             <a class="box1 image1" href="https://www.lyricopera.org/" target="_blank">
                                 <img class="box1" src="./assets/images/ballet.jpg" alt="dance">
                             </a>
-                        </div>
-                            <div class="col-sm-3">
-                                <!-- Image links (currently empty links) -->
-                                <a class="box1 image2" href="https://www.bundesjugendballett.de/d/index.html"
-                                    target="_blank">
-                                    <img class="box1" src="./assets/images/dance male.jpg" alt="male dancer">
-                                </a>
-
-                            </div>
-
-
-                            <div class="col-sm-6">
-                                <p> </p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-3">
                             <div class="title box2">LEAP</div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-md-4">
+                            <!-- Image links (currently empty links) -->
+                            <a class="box1 image2" href="https://www.bundesjugendballett.de/d/index.html"
+                                target="_blank">
+                                <img class="box1" src="./assets/images/dance male.jpg" alt="male dancer">
+                            </a>
                             <div class="title box3">REACH</div>
                         </div>
 
 
-                        <div class="col-sm-6">
+                        <div class="col-md-4">
                             <p> </p>
                         </div>
                     </div>
+
+
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
                             <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
                                 <img class="box1" src="./assets/images/dance.jpeg" alt="dancer">
                             </a>
-
+                            <div class="title box4">STRETCH</div>
                         </div>
                         <!-- Word box describing each link -->
 
                         <!-- Image links (currently empty links) -->
-                        <div class="col-sm-3">
+                        <div class="col-md-4">
                             <a class="box1 image4" href="https://www.sephora.com" target="_blank">
                                 <img class="box1" src="./assets/images/makeup 2.jpg" alt="makeup">
                             </a>
+                            <div class="title box5">CREATE</div>
 
                         </div>
                         <!-- Word box describing each link -->
 
-                        <div class="col-sm-6">
+                        <div class="col-md-4">
                             <p> </p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <div class="title box4">STRETCH</div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="title box5">CREATE</div>
-                        </div>
 
-
-                        <div class="col-sm-6">
-                            <p> </p>
-                        </div>
-                    </div>
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
                             <a class="box1 image5" href="https://www.ulta.com/" target="_blank">
                                 <img class="box1" src="./assets/images/makeup.jpeg" alt="makeup powder">
                             </a>
+                            <div class="title box6">BLEND</div>
 
                         </div>
                         <!-- Word box describing each link -->
 
-                        <div class="col-sm-9">
+                        <div class="col-md-8">
                             <p> </p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <div class="title box6">BLEND</div>
-                        </div>
 
-
-
-                        <div class="col-sm-9">
-                            <p> </p>
-                        </div>
-                    </div>
                 </div>
             </section>
         </div>
@@ -189,6 +166,16 @@
         </div>
     </footer>
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
