updated with new game

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,10 +76,12 @@
                     <div class="row">
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
-                            <a class="box1 image1" href="https://www.lyricopera.org/" target="_blank">
-                                <img class="box1" src="./assets/images/ballet.jpg" alt="dance">
+                            <a class="box1 image1" href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank">
+                                <img class="box1" src="./assets/images/city background.jpg" alt="word guess game">
                             </a>
-                            <div class="title box2">LEAP</div>
+                            <div class="title box2">GUESS
+                                
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
