added new BLINK game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,11 +85,11 @@
                         </div>
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
-                            <a class="box1 image2" href="https://www.bundesjugendballett.de/d/index.html"
+                            <a class="box1 image2" href="https://jimilocn.github.io/unit-4-game/"
                                 target="_blank">
-                                <img class="box1" src="./assets/images/dance male.jpg" alt="male dancer">
+                                <img class="box1" src="./assets/images/blackpink.png" alt="BLINK GAME">
                             </a>
-                            <div class="title box3">REACH</div>
+                            <div class="title box3">BLINK</div>
                         </div>
 
 
