added drag trivia to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,9 +103,9 @@
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
                             <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
-                                <img class="box1" src="./assets/images/dance.jpeg" alt="dancer">
+                                <img class="box1" src="./assets/images/dragqueens.png" alt="Drag Queens">
                             </a>
-                            <div class="title box4">STRETCH</div>
+                            <div class="title box4">Drag Trivia</div>
                         </div>
 
 
