fixed some style

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                             <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
                                 <img class="box1" src="./assets/images/dragqueens.png" alt="Drag Queens">
                             </a>
-                            <div class="title box4">Drag Trivia</div>
+                            <div class="title box4">DRAG TRIVIA</div>
                         </div>
 
 
