--- a/portfolio.html
+++ b/portfolio.html
@@ -80,13 +80,12 @@
                                 <img class="box1" src="./assets/images/city background.jpg" alt="word guess game">
                             </a>
                             <div class="title box2">GUESS
-                                
+
                             </div>
                         </div>
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
-                            <a class="box1 image2" href="https://jimilocn.github.io/unit-4-game/"
-                                target="_blank">
+                            <a class="box1 image2" href="https://jimilocn.github.io/unit-4-game/" target="_blank">
                                 <img class="box1" src="./assets/images/blackpink.png" alt="BLINK GAME">
                             </a>
                             <div class="title box3">BLINK</div>
@@ -102,7 +101,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <!-- Image links (currently empty links) -->
-                            <a class="box1 image3" href="https://www.danceworkschicago.org/" target="_blank">
+                            <a class="box1 image3" href="https://jimilocn.github.io/TriviaGame/" target="_blank">
                                 <img class="box1" src="./assets/images/dragqueens.png" alt="Drag Queens">
                             </a>
                             <div class="title box4">DRAG TRIVIA</div>
@@ -111,10 +110,10 @@
 
                         <!-- Image links (currently empty links) -->
                         <div class="col-md-4">
-                            <a class="box1 image4" href="https://www.sephora.com" target="_blank">
+                            <a class="box1 image4" href="https://jimilocn.github.io/GifTastic/" target="_blank">
                                 <img class="box1" src="./assets/images/makeup 2.jpg" alt="makeup">
                             </a>
-                            <div class="title box5">CREATE</div>
+                            <div class="title box5">MAKEUP GIF</div>
 
                         </div>
 
@@ -126,11 +125,11 @@
 
                     <div class="row">
                         <div class="col-md-4">
-                            <!-- Image links (currently empty links) -->
+                            <!-- Image links (currently empty links)
                             <a class="box1 image5" href="https://www.ulta.com/" target="_blank">
                                 <img class="box1" src="./assets/images/makeup.jpeg" alt="makeup powder">
                             </a>
-                            <div class="title box6">BLEND</div>
+                            <div class="title box6">BLEND</div> -->
 
                         </div>
 
@@ -170,14 +169,14 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
