working on random fixes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             Jimi Loc Nguyen hails from the lower peninsula of Mitten State. Growing up in a small
                             farming
                             community
-                            near Grand Rapids, Jimi activated his love for manifesting his colorful imagination as an
+                            near Grand Rapids, Jimi started his love for manifesting his colorful imagination as an
                             avid
                             musician.
                             In his primary education, Jimi became well practiced in Flute, Clarinet, Saxophone, and
@@ -93,30 +93,7 @@
                             material
                             arts, graphic design, and even movement and dance choreography.
                         </p>
-
                         <p>
-                            Jimi Loc Nguyen hails from the lower peninsula of Mitten State. Growing up in a small
-                            farming
-                            community
-                            near Grand Rapids, Jimi activated his love for manifesting his colorful imagination as an
-                            avid
-                            musician.
-                            In his primary education, Jimi became well practiced in Flute, Clarinet, Saxophone, and
-                            Violin.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p>
-                            Throughout his years , he transitioned his efforts from music cgit gitomposition and
-                            arrangement,
-                            to
-                            material
-                            arts, graphic design, and even movement and dance choreography.
-
-
                             Today, Jimi works as a Chiropractic technician at The Chiro One Wellness Center of
                             Andersonville by
                             day,
@@ -125,6 +102,13 @@
                             his
                             trajectory forward into the world of technology and computer sciences.
                         </p>
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+
                         <p>
                             With his rigorous background in dance and the arts, Jimi Loc Nguyen is the perfect storm of
                             grit,
