--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h2 id="h2">
-                            Contact
+                            Portfolio
                         </h2>
                     </div>
                 </div>
@@ -110,10 +110,10 @@
 
                         <!-- Image links (currently empty links) -->
                         <div class="col-md-4">
-                            <a class="box1 image4" href="https://jimilocn.github.io/GifTastic/" target="_blank">
-                                <img class="box1" src="./assets/images/makeup 2.jpg" alt="makeup">
+                            <a class="box1 image4" href="https://matthewheimark.github.io/project1/" target="_blank">
+                                <img class="box1" src="./assets/images/android-chrome-512x512.png" alt="SRSLY">
                             </a>
-                            <div class="title box5">MAKEUP GIF</div>
+                            <div class="title box5">SRSLY</div>
 
                         </div>
 
@@ -125,16 +125,19 @@
 
                     <div class="row">
                         <div class="col-md-4">
-                            <!-- Image links (currently empty links)
-                            <a class="box1 image5" href="https://www.ulta.com/" target="_blank">
-                                <img class="box1" src="./assets/images/makeup.jpeg" alt="makeup powder">
-                            </a>
-                            <div class="title box6">BLEND</div> -->
 
+                            <a class="box1 image5" href="https://jimilocn.github.io/trainScheduler/" target="_blank">
+                                <img class="box1" src="./assets/images/cherry.jpg" alt="Cherry">
+                            </a>
+                            <div class="title box6">TRAIN EXPRESS</div>
+
+                        </div>
+                        <div class="col-md-4">
+                  
                         </div>
 
 
-                        <div class="col-md-8">
+                        <div class="col-md-4">
                             <p> </p>
                         </div>
                     </div>
