polishing up portfolio for employers

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,78 +71,96 @@
                 </div>
                 <!-- Horizontal line break -->
                 <hr>
-                <!-- Sets positioning for boxes within -->
-                <div class="images">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <!-- Image links (currently empty links) -->
-                            <a class="box1 image1" href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank">
-                                <img class="box1" src="./assets/images/city background.jpg" alt="word guess game">
-                            </a>
-                            <div class="title box2">GUESS
 
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="./assets/images/city background square.jpg"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Word Guess</h5>
+                                <p class="card-text">Explore the different neighborhoods of Chicago with this fun Word
+                                    Guess Game</p>
+                                <a href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank"
+                                    class="btn btn-primary">Website</a>
+                                    <a href="https://github.com/jimilocn/Word-Guess-Game" target="_blank"
+                                    class="btn btn-primary">Github</a>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <!-- Image links (currently empty links) -->
-                            <a class="box1 image2" href="https://jimilocn.github.io/unit-4-game/" target="_blank">
-                                <img class="box1" src="./assets/images/blackpink.png" alt="BLINK GAME">
-                            </a>
-                            <div class="title box3">BLINK</div>
-                        </div>
-
-
-                        <div class="col-md-4">
-                            <p> </p>
-                        </div>
                     </div>
-
-
-                    <div class="row">
-                        <div class="col-md-4">
-                            <!-- Image links (currently empty links) -->
-                            <a class="box1 image3" href="https://jimilocn.github.io/TriviaGame/" target="_blank">
-                                <img class="box1" src="./assets/images/dragqueens.png" alt="Drag Queens">
-                            </a>
-                            <div class="title box4">DRAG TRIVIA</div>
-                        </div>
-
-
-                        <!-- Image links (currently empty links) -->
-                        <div class="col-md-4">
-                            <a class="box1 image4" href="https://matthewheimark.github.io/project1/" target="_blank">
-                                <img class="box1" src="./assets/images/android-chrome-512x512.png" alt="SRSLY">
-                            </a>
-                            <div class="title box5">SRSLY</div>
-
-                        </div>
-
-
-                        <div class="col-md-4">
-                            <p> </p>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-4">
-
-                            <a class="box1 image5" href="https://jimilocn.github.io/trainScheduler/" target="_blank">
-                                <img class="box1" src="./assets/images/cherry.jpg" alt="Cherry">
-                            </a>
-                            <div class="title box6">TRAIN EXPRESS</div>
-
-                        </div>
-                        <div class="col-md-4">
-                  
-                        </div>
-
-
-                        <div class="col-md-4">
-                            <p> </p>
+                    <div class="col-sm-6">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="./assets/images/blackpink.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Diva</h5>
+                                <p class="card-text">Release your inner Diva with BlackPink to relesae the new greatest
+                                    hits for the BillBoards Top Tracks!</p>
+                                <a href="https://jimilocn.github.io/unit-4-game/" target="_blank"
+                                    class="btn btn-primary">Website</a>
+                                    <a href="https://github.com/jimilocn/unit-4-game" target="_blank"
+                                    class="btn btn-primary">Github</a>
+                            </div>
                         </div>
                     </div>
 
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="./assets/images/dragqueens.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Whats the Tea?</h5>
+                                <p class="card-text">See how well you know the Queens from RuPaul's Drag Race throughout
+                                    the seasons. Make Mama Ru Proud!</p>
+                                <a href="https://jimilocn.github.io/TriviaGame/" target="_blank"
+                                    class="btn btn-primary">Website</a>
+                                    <a href="https://github.com/jimilocn/TriviaGame" target="_blank"
+                                    class="btn btn-primary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="./assets/images/logo.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">SRSLY?</h5>
+                                <p class="card-text">Ever stuck at the airport overnight? Not a problem! Let us help you
+                                    get to a hotel ASAP!</p>
+                                <a href="https://matthewheimark.github.io/project1/" target="_blank"
+                                    class="btn btn-primary">Website</a>
+                                <a href="https://github.com/matthewheimark/project1" target="_blank"
+                                    class="btn btn-primary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="./assets/images/cherry.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Train Scheduler</h5>
+                                <p class="card-text">Explore Japan on one of the most efficient train systems in the
+                                    world, but make sure you're not late!</p>
+                                <a href="https://jimilocn.github.io/trainScheduler/" target="_blank"
+                                    class="btn btn-primary">Website</a>
+                                <a href="https://github.com/jimilocn/trainScheduler" target="_blank"
+                                    class="btn btn-primary">Github</a>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+
+                    </div>
+
+                </div>
+
+
             </section>
         </div>
 
