--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                                     Guess Game</p>
                                 <a href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank"
                                     class="btn btn-primary">Website</a>
-                                    <a href="https://github.com/jimilocn/Word-Guess-Game" target="_blank"
+                                <a href="https://github.com/jimilocn/Word-Guess-Game" target="_blank"
                                     class="btn btn-primary">Github</a>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                                     hits for the BillBoards Top Tracks!</p>
                                 <a href="https://jimilocn.github.io/unit-4-game/" target="_blank"
                                     class="btn btn-primary">Website</a>
-                                    <a href="https://github.com/jimilocn/unit-4-game" target="_blank"
+                                <a href="https://github.com/jimilocn/unit-4-game" target="_blank"
                                     class="btn btn-primary">Github</a>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                                     the seasons. Make Mama Ru Proud!</p>
                                 <a href="https://jimilocn.github.io/TriviaGame/" target="_blank"
                                     class="btn btn-primary">Website</a>
-                                    <a href="https://github.com/jimilocn/TriviaGame" target="_blank"
+                                <a href="https://github.com/jimilocn/TriviaGame" target="_blank"
                                     class="btn btn-primary">Github</a>
                             </div>
                         </div>
@@ -171,20 +171,26 @@
 
     <!-- cute footer that is fixed -->
     <footer>
-        <div class="container foot">
+        <div class="container foot text-center">
             <div class="row">
-                <div class="col-sm-5">
-                    <p> </p>
+                <div class="col-sm-12">Links to:
+                    <a href="www.linkedin.com/in/jimi-loc-nguyen"> Linkedin </a>
+                    <a
+                        href="https://docs.google.com/document/d/16hA0mp15azMN1fWAwkXd0oWcFXhpgxOL19_Bsbc8BUY/edit?usp=sharing">
+                        Resume </a>
+                    <a href="https://github.com/jimilocn"> Github </a>
                 </div>
-                <div class="col-sm-2">
+            </div>
+            <div class="row">
+
+                <div class="col-sm-12">
                     <p id="love">
                         Copyright &copy;
                     </p>
                 </div>
-                <div class="col-sm-5">
-                    <p> </p>
-                </div>
+
             </div>
+
         </div>
     </footer>
 
